Fixed small bug in darkmode search input
- text was not visible when typing in dark mode

--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -74,6 +74,10 @@
         &:hover {
             border-color: var(--clr-accent);
         }
+
+        & [class$='-Input'] {
+            color: var(--foreground);
+        }
     }
 
     & [class$='-singleValue'] {
